fixed front page format on mobile:

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -187,6 +187,7 @@ h5 {
 
 input, textarea, select, option {
   font-family: 'Quicksand', sans-serif;
+  box-sizing: border-box;
 }
 
 input, textarea {
